fixed view for iphone x on safari

--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,13 @@
 
 .landing-page {
     width: 100%;
-    margin: auto;
-}
-
-.landing-grid {
+    height: 100%;
     background: #1A2980;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #26D0CE, #1A2980);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #26D0CE, #1A2980); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.landing-grid {
     text-align: center;
     position: fixed;
     width: 100%;
@@ -18,6 +18,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0;
 }
 
 .header-color {
@@ -112,7 +113,7 @@
 .card-title-cplusplus {
     color: #fff;
     height: 176px;
-    background: url('https://media.geeksforgeeks.org/wp-content/cdn-uploads/titleShadow-1024x341.png') center / cover;
+    background: url(https://media.geeksforgeeks.org/wp-content/cdn-uploads/titleShadow-1024x341.png) center / cover;
 }
 
 .projects-grid {
@@ -213,6 +214,11 @@
     min-height: 575px;
 }
 
+.education-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 @media screen and (max-width: 376px) and (max-height: 813px) { /* iPhone X/Xs */
     .banner-text h1 {
         font-size: 41px;
@@ -220,7 +226,7 @@
         color: white;
         margin-bottom: 2px;
         padding-top: 4px;
-        margin-top: 28px;
+        margin-top: 20px;
     }
     .banner-text {
         background-color: black;
@@ -254,6 +260,7 @@
         -moz-border-radius: 150px;
         display: inline-block;
     }
+
 }
 
 @media screen and (max-width: 483px) and (max-height: 792px) { /* iPhone 6/7/8 Plus */
